--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ material = "1.12.0"
 constraintlayout = "2.1.4"
 lifecycleLivedataKtx = "2.8.6"
 lifecycleViewmodelKtx = "2.8.6"
+#lifecycleLivedataKtx = "2.6.1"
+#lifecycleViewmodelKtx = "2.6.1"
 navigationFragment = "2.8.3"
 navigationUi = "2.8.3"
 legacySupportV4 = "1.0.0"
